--- a/Projekat/app/src/main/res/layout/notifications_one_friend_request_layout.xml
+++ b/Projekat/app/src/main/res/layout/notifications_one_friend_request_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     android:id="@+id/oneNotification_firstRelativeLayout"
     android:layout_height="wrap_content">
@@ -10,19 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:background="@color/white"
+        android:background="@drawable/rang_rounded_corners"
         android:id="@+id/oneNotification_secondRelativeLayout">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/oneNotification_usersProfileImage"
             android:layout_margin="3dp"
-            android:id="@+id/oneNotification_usersProfileImage"/>
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="1dp"
+            app:civ_shadow="true"
+            app:civ_shadow_radius="5dp"
+            app:civ_shadow_color="#3f51b5"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp"
             android:id="@+id/oneNotification_usersUsername"
             android:layout_toRightOf="@+id/oneNotification_usersProfileImage"
             android:textSize="15dp"/>
@@ -30,7 +36,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="5dp"
             android:id="@+id/oneNotification_sentFriendRequest"
             android:layout_toRightOf="@+id/oneNotification_usersProfileImage"
             android:layout_below="@+id/oneNotification_usersUsername"
@@ -47,7 +54,8 @@
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_margin="8dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="20dp"
             android:id="@+id/oneNotification_acceptRequest"
             android:layout_toRightOf="@+id/oneNotification_usersUsername"
             android:src="@drawable/ic_baseline_check_24"/>
@@ -55,7 +63,8 @@
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_margin="8dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="5dp"
             android:id="@+id/oneNotification_declineFriendRequest"
             android:layout_toRightOf="@+id/oneNotification_acceptRequest"
             android:src="@drawable/ic_baseline_cancel_24"/>
