--- a/Projekat/app/src/main/res/layout/activity_add_new_object_on_map.xml
+++ b/Projekat/app/src/main/res/layout/activity_add_new_object_on_map.xml
@@ -7,23 +7,40 @@
     android:background="@drawable/orange_gradient_top_down"
     tools:context=".AddNewObjectOnMapActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textSize="20dp"
-        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
+        android:id="@+id/add_new_object_title"
         android:textAlignment="center"
-        android:text="Add new object"
-        android:textStyle="bold"
-        android:id="@+id/textView_addNewObject"
-        android:textColor="@color/black"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="2dp"
+            app:srcCompat="@drawable/ic_baseline_add_location_24" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textSize="25dp"
+            android:layout_marginStart="5dp"
+            android:textAlignment="center"
+            android:text="Add new object"
+            android:textStyle="bold"
+            android:id="@+id/textView_addNewObject"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText_latitudeOfObject"
-        android:layout_below="@+id/textView_addNewObject"
+        android:layout_below="@+id/add_new_object_title"
         android:enabled="false"
         android:focusable="false"
         android:layout_marginTop="20dp"
@@ -61,7 +78,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:text="Add object"
         android:layout_below="@+id/editText_passwordSuggestion"
