--- a/Projekat/app/src/main/res/layout/activity_users_profile.xml
+++ b/Projekat/app/src/main/res/layout/activity_users_profile.xml
@@ -7,42 +7,52 @@
     android:background="@drawable/orange_gradient_top_down"
     tools:context=".UsersProfileActivity">
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:id="@+id/usersProfile_usersProfileImage_imageView"/>
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="7dp"
-        android:id="@+id/usersProfile_usersUsername_textView"
-        android:textStyle="bold"
-        android:layout_below="@+id/usersProfile_usersProfileImage_imageView"
-        android:textSize="20dp"/>
+        android:background="@drawable/rounded_corners"
+        android:id="@+id/accept_decline_title"
+        android:layout_margin="40dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/usersProfile_usersUsername_textView"
-        android:id="@+id/usersProfile_usersNumberOfTokens_textView"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginLeft="30dp"/>
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/usersProfile_usersProfileImage_imageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="1dp"
+            app:civ_shadow="true"
+            app:civ_shadow_color="#3f51b5"
+            app:civ_shadow_radius="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:id="@+id/usersProfile_usersUsername_textView"
+            android:textStyle="bold"
+            android:layout_below="@+id/usersProfile_usersProfileImage_imageView"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/usersProfile_usersUsername_textView"
+            android:id="@+id/usersProfile_usersNumberOfTokens_textView"
+            android:layout_centerHorizontal="true"
+            android:textSize="15dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="20dp"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/usersProfile_usersNumberOfTokens_textView">
+        android:layout_below="@+id/accept_decline_title">
 
         <Button
             android:layout_width="wrap_content"
