--- a/Projekat/app/src/main/res/layout/rang_list_one_user_layout.xml
+++ b/Projekat/app/src/main/res/layout/rang_list_one_user_layout.xml
@@ -25,7 +25,9 @@
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -33,6 +35,7 @@
                 android:layout_margin="2dp"
                 android:id="@+id/rangList_usersName_textView"
                 android:textSize="15dp"
+                android:textStyle="bold"
                 android:textAlignment="center"/>
 
             <TextView
@@ -41,7 +44,7 @@
                 android:layout_margin="2dp"
                 android:id="@+id/rangList_usersUsername_textView"
                 android:textSize="15dp"
-                android:textStyle="bold"
+                android:textStyle="italic"
                 android:textAlignment="center"/>
 
         </LinearLayout>
@@ -50,7 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_margin="5dp">
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="20dp">
 
             <TextView
                 android:layout_width="match_parent"
