--- a/Projekat/app/src/main/res/layout/activity_wi_fi_suggestions_of_a_place.xml
+++ b/Projekat/app/src/main/res/layout/activity_wi_fi_suggestions_of_a_place.xml
@@ -13,7 +13,9 @@
         android:layout_centerHorizontal="true"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:layout_margin="10dp"
+        android:textColor="@android:color/white"
+        android:textAlignment="center"
+        android:layout_marginTop="40dp"
         android:text="Wi-Fi password suggestions"
         android:id="@+id/wiFiSuggestions_textView"/>
 
@@ -22,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Deny all"
-        android:layout_margin="10dp"
+        android:layout_marginTop="40dp"
         android:layout_below="@+id/wiFiSuggestions_textView"
         android:id="@+id/wiFiSuggestions_denyAllButton"/>
 
