--- a/Projekat/app/src/main/res/layout/activity_register.xml
+++ b/Projekat/app/src/main/res/layout/activity_register.xml
@@ -8,13 +8,13 @@
     tools:context=".RegisterActivity">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="0dp"
         android:id="@+id/wifi_image"
         android:src="@drawable/ic_outline_wifi_24"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="17dp"
         />
 
     <TextView
@@ -23,15 +23,16 @@
         android:id="@+id/register_in"
         android:layout_below="@+id/wifi_image"
         android:text="@string/wifinder"
+        android:textSize="20dp"
         android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_centerHorizontal="true"/>
 
     <ImageView
         android:id="@+id/register_imageView"
-        android:layout_marginTop="20dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginHorizontal="60dp"
         android:layout_below="@+id/register_in"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
@@ -43,13 +44,13 @@
         android:id="@+id/register_upload_photo"
         android:layout_marginHorizontal="45dp"
         android:text="Upload photo"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="3dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/firstname"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginHorizontal="30dp"
         android:id="@+id/register_firstname"
         android:layout_below="@+id/register_upload_photo"/>
@@ -67,7 +68,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/phonenumber"
         android:layout_marginHorizontal="30dp"
-        android:layout_below="@+id/register_lastname"
+        android:layout_below="@+id/register_emailaddress"
         android:id="@+id/register_phonenumber"/>
 
     <EditText
@@ -75,7 +76,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/username"
         android:layout_marginHorizontal="30dp"
-        android:layout_below="@+id/register_phonenumber"
+        android:layout_below="@+id/register_lastname"
         android:id="@+id/register_username"/>
 
     <EditText
@@ -91,7 +92,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:layout_marginHorizontal="30dp"
-        android:layout_below="@+id/register_emailaddress"
+        android:layout_below="@+id/register_phonenumber"
         android:id="@+id/register_password"/>
 
     <Button
@@ -100,7 +101,7 @@
         android:id="@+id/register_btn"
         android:text="Register"
         android:layout_centerHorizontal="true"
-        android:layout_margin="10dp"
+        android:layout_marginTop="8dp"
         android:layout_below="@+id/register_password"/>
 
     <TextView
@@ -112,9 +113,5 @@
         android:layout_below="@+id/register_btn"
         android:id="@+id/register_gotologin_textview"
         android:textAlignment="center"/>
-
-
-
-
 
 </RelativeLayout>
