--- a/Projekat/app/src/main/res/layout/activity_friends_profile.xml
+++ b/Projekat/app/src/main/res/layout/activity_friends_profile.xml
@@ -22,126 +22,140 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/friends_profile_username_fixed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="36dp"
-        android:text="@string/profile_friends_username_text"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/friends_profile_title"
+        android:layout_width="351dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/rounded_corners"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image">
 
-    <TextView
-        android:id="@+id/friends_profile_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="36dp"
-        android:text="lejdidzu"
-        app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+        <TextView
+            android:id="@+id/friends_profile_username_fixed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/profile_friends_username_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-        android:id="@+id/friends_profile_first_name_fixed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/profile_first_name_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_username_fixed" />
+        <TextView
+            android:id="@+id/friends_profile_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
+            android:text="lejdidzu"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed" />
 
-    <TextView
-        android:id="@+id/friends_profile_first_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:text="Julija"
-        app:layout_constraintStart_toEndOf="@+id/friends_profile_first_name_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_username" />
+        <TextView
+            android:id="@+id/friends_profile_first_name_fixed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/profile_first_name_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/friends_profile_username_fixed" />
 
-    <TextView
-        android:id="@+id/friends_profile_last_name_fixed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/profile_last_name_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_first_name_fixed" />
+        <TextView
+            android:id="@+id/friends_profile_first_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:text="Julija"
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_first_name_fixed"
+            app:layout_constraintTop_toBottomOf="@+id/friends_profile_username" />
 
-    <TextView
-        android:id="@+id/friends_profile_last_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:text="Pancic"
-        app:layout_constraintStart_toEndOf="@+id/friends_profile_last_name_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_first_name" />
+        <TextView
+            android:id="@+id/friends_profile_last_name_fixed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/profile_last_name_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/friends_profile_first_name_fixed" />
 
-    <ImageView
-        android:id="@+id/friends_profile_champ_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="33dp"
-        app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image"
-        app:srcCompat="@drawable/ic_outline_emoji_events_24" />
+        <TextView
+            android:id="@+id/friends_profile_last_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:text="Pancic"
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_last_name_fixed"
+            app:layout_constraintTop_toBottomOf="@+id/friends_profile_first_name" />
 
-    <TextView
-        android:id="@+id/friends_profile_points_fixed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="36dp"
-        android:text="@string/profile_points_text"
-        app:layout_constraintStart_toEndOf="@+id/friends_profile_champ_image"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+        <ImageView
+            android:id="@+id/friends_profile_champ_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="108dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed"
+            app:srcCompat="@drawable/ic_outline_emoji_events_24_black" />
 
-    <TextView
-        android:id="@+id/friends_profile_points"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="36dp"
-        android:text="250"
-        app:layout_constraintStart_toEndOf="@+id/friends_profile_points_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_user_image" />
+        <TextView
+            android:id="@+id/friends_profile_points_fixed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/profile_points_text"
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_champ_image" />
 
-    <CheckBox
-        android:id="@+id/friends_profile_checkbox"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="106dp"
-        android:layout_marginTop="16dp"
-        android:checked="true"
-        android:text="@string/friends_profile_check"
-        app:layout_constraintStart_toEndOf="@+id/friends_profile_last_name_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_champ_image" />
+        <TextView
+            android:id="@+id/friends_profile_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="250"
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_points_fixed" />
+
+        <CheckBox
+            android:id="@+id/friends_profile_checkbox"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="116dp"
+            android:layout_marginTop="16dp"
+            android:checked="true"
+            android:text="@string/friends_profile_check"
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_last_name_fixed"
+            app:layout_constraintTop_toBottomOf="@+id/friends_profile_champ_image" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/friends_profile_search_friends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="39dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Search user's friends"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_last_name_fixed" />
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_title" />
 
     <ImageView
         android:id="@+id/friends_profile_search_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="122dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintStart_toEndOf="@+id/friends_profile_search_friends"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_points_fixed"
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_title"
         app:srcCompat="@drawable/ic_baseline_search_24" />
 
     <androidx.recyclerview.widget.RecyclerView
