--- a/Projekat/app/src/main/res/layout/activity_friends_profile.xml
+++ b/Projekat/app/src/main/res/layout/activity_friends_profile.xml
@@ -9,26 +9,28 @@
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/friends_profile_user_image"
-        android:layout_width="130dp"
-        android:layout_height="150dp"
+        android:layout_width="120dp"
+        android:layout_height="140dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="140dp"
+        android:layout_marginStart="145dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="145dp"
         app:civ_border_color="#FFFFFF"
         app:civ_border_width="1dp"
         app:civ_shadow="true"
         app:civ_shadow_color="#3f51b5"
         app:civ_shadow_radius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/friends_profile_title"
-        android:layout_width="351dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="360dp"
+        android:layout_height="109dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/rounded_corners"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +44,7 @@
             android:layout_marginTop="15dp"
             android:text="@string/profile_friends_username_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/friends_profile_username"
@@ -51,8 +53,8 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="15dp"
             android:text="lejdidzu"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed" />
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/friends_profile_first_name_fixed"
@@ -98,37 +100,37 @@
             android:id="@+id/friends_profile_champ_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="108dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/friends_profile_username_fixed"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_outline_emoji_events_24_black" />
 
         <TextView
             android:id="@+id/friends_profile_points_fixed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_marginStart="5dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="15dp"
             android:text="@string/profile_points_text"
-            app:layout_constraintStart_toEndOf="@+id/friends_profile_champ_image" />
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_champ_image"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/friends_profile_points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:layout_marginStart="5dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="15dp"
             android:text="250"
-            app:layout_constraintStart_toEndOf="@+id/friends_profile_points_fixed" />
+            app:layout_constraintStart_toEndOf="@+id/friends_profile_points_fixed"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/friends_profile_checkbox"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_marginStart="116dp"
+            android:layout_marginStart="96dp"
             android:layout_marginTop="16dp"
             android:checked="true"
             android:text="@string/friends_profile_check"
@@ -160,10 +162,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="25dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="25dp"
         android:id="@+id/recyclerViewFriendsProfile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friends_profile_search_friends" />
+        app:layout_constraintTop_toBottomOf="@+id/friends_profile_search_friends"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
