--- a/Projekat/app/src/main/res/layout/activity_my_profile_friends.xml
+++ b/Projekat/app/src/main/res/layout/activity_my_profile_friends.xml
@@ -50,10 +50,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_centerHorizontal="true"
         app:layout_constraintTop_toBottomOf="@+id/profile_friends_search_button"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="20dp"
         android:id="@+id/recyclerViewMyFriends"/>
 
