--- a/Projekat/app/src/main/res/layout/activity_main.xml
+++ b/Projekat/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="10dp"
+        android:inputType="textPassword"
         android:id="@+id/login_password"
         android:hint="@string/password"
         android:layout_below="@+id/login_email_address"
