--- a/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
+++ b/Projekat/app/src/main/res/layout/activity_my_profile_info.xml
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:text="lejdidzu"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <LinearLayout
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="13dp"
-                    android:text="300"
+                    android:text=""
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="35dp"
-        android:text="Julija"
+        android:text=""
         app:layout_constraintStart_toEndOf="@+id/profile_first_name_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_info_container" />
 
@@ -111,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
-        android:text="Pancic"
+        android:text=""
         app:layout_constraintStart_toEndOf="@+id/profile_last_name_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_first_name" />
 
@@ -121,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
-        android:text="0631231997"
+        android:text=""
         app:layout_constraintStart_toEndOf="@+id/profile_phone_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_last_name" />
 
@@ -131,19 +131,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
-        android:text="julijapancic1@gmail.com"
+        android:text=""
         app:layout_constraintStart_toEndOf="@+id/profile_email_fixed"
         app:layout_constraintTop_toBottomOf="@+id/profile_phone" />
 
-    <TextView
+    <!-- <TextView
         android:id="@+id/profile_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
-        android:text="julija123"
+        android:text=""
         app:layout_constraintStart_toEndOf="@+id/profile_password_fixed"
-        app:layout_constraintTop_toBottomOf="@+id/profile_email" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_email" /> -->
 
     <Button
         android:id="@+id/profile_edit_button"
@@ -153,7 +153,7 @@
         android:layout_marginTop="32dp"
         android:text="Edit profile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_password" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_email" />
 
     <TextView
         android:id="@+id/profile_first_name_fixed"
@@ -195,7 +195,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_phone_fixed" />
 
-    <TextView
+    <!-- <TextView
         android:id="@+id/profile_password_fixed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -203,6 +203,6 @@
         android:layout_marginTop="16dp"
         android:text="@string/profile_password_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_email_fixed" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_email_fixed" /> -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
